tests/files/flow_controller_tests/should_run/103.cmdr
x = 50;
print arcsinh(x);