tests/files/flow_controller_tests/should_fail/096.cmdr
x = false;
print arcsinh(x);